k8s/configmap.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: configmap-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      application: nginx
  template:
    metadata:
      labels:
        application: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.2
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: "/appConfig"
      volumes:
        - name: config-volume
          configMap:
            name: my-configmap
            items:
              - key: config.json
                path: config.json
