k8s/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
spec:
  selector:
    matchLabels:
      application: nginx
  template:
    metadata:
      labels:
        application: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
