k8s/k8s_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deploy
spec:
  selector:
    matchLabels:
      application: nginx
  template:
    metadata:
      labels:
        application: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.2
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"   # 1 vCPU = 1000m
            limits:
              memory: "1Gi"
              cpu: "500m"
