k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: devops-testing
spec:
  containers:
    - name: nginx
      image: nginx:latest
