k8s/secret.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deploy
spec:
  # replicas: 4
  # strategy:
  #   type: RollingUpdate # Recreate
  #   rollingUpdate:
  #     maxSurge: 50%
  #     maxUnavailable: 50%
  selector:
    matchLabels:
      application: nginx
  template:
    metadata:
      labels:
        application: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.2
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: "/supersecretpath"
      volumes:
        - name: config
          secret:
            secretName: my-secret
