k8s/deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: my-devops-learning
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:   #which application has to select/which pod has to select
   application: nginx
  ports:
   - name: http-port-01
     port: 80
     targetPort: 80 #target port of container
   - name: http-port-02
     port: 8085
     targetPort: http #target port of container

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
spec:
  type: NodePort
  selector:   #which application has to select/which pod has to select
   application: nginx
  ports:
   - name: http-port-01
     port: 80
     targetPort: 80 #target port of container
     nodePort: 30080 #node port will be exposed on 30080 on each node
   - name: http-port-02
     port: 8085
     targetPort: http #target port of container
     nodePort: 30002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deploy
spec:
  replicas: 4
  strategy:
    type: RollingUpdate # Recreate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      application: nginx
  template:
    metadata:
      labels:
        application: nginx
    spec:
      # nodeName: devops-control-plane
      # tolerations:
      #   - key: "gpu"
      #     operator: "Equal"
      #     value: "true"
      #     effect: "NoSchedule"
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: performance
      #               operator: In
      #               values:
      #                 - high
          # preferredDuringSchedulingIgnoredDuringExecution:
          #   - weight: 1
          #     preference:
          #       matchExpressions:
          #         - key: performance
          #           operator: In
          #           values:
          #             - high
      containers:
        - name: nginx
          image: nginx:1.27.2
          ports:
            - name: http
              containerPort: 80
